--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
 }
 
 
-.logo-box {
+.header__logo-box {
     /* logo-box的母element是 .header，只有将 .header 的position设为relative */
     /* logo-box的position: absolute才起作用 top和left这时才是对应母element作为参照*/
     position: absolute;
@@ -81,7 +81,7 @@ body {
     left: 4rem;
 }
 
-.logo {
+.header__logo {
     /* 浏览器会自动计算width以满足图片的要求 */
     /* 设置width的话，浏览器会自动计算height */
     height: 3.5rem;
@@ -89,13 +89,13 @@ body {
 
 /* Animation can still happen when hover */
 /* when hover on the .logo-box, ONLY .logo have hover effects. .logo-box will NOT have any hover effects. */
-.logo-box:hover .logo {
+.header__logo-box:hover .header__logo {
     animation: moveInRight 1s ease-in;
 }
 
 
 
-.text-box {
+.header__text-box {
     position: absolute;
 
     /* 在position为absolute的情况下，top left 各设置为 50% 是无法居中的 */
@@ -118,7 +118,7 @@ body {
 }
 
 
-.heading-primary-main {
+.heading-primary--main {
     /* 这个class为span，将其设为block element 能够占用全部width，这样就能更好的调整位置 */
     display: block;
     font-size: 6rem;
@@ -138,7 +138,7 @@ body {
 
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
@@ -227,7 +227,7 @@ body {
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
 }
 
-.btn-white {
+.btn--white {
     background-color: #fff;
     color: #777;
 }
@@ -255,7 +255,7 @@ body {
     transition: all .4s;
 }
 
-.btn-white::after {
+.btn--white::after {
     background-color: #fff;
 }
 
@@ -264,7 +264,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInBottom .5s ease-out .75s;
 
     /* it will automatically apply the styles up to 0% before the animnation statrs */
