Reformat CSS to SASS

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
   font-weight: 400;
   /* font-size: 16px; */
   line-height: 1.7;
-  color: #777;
+  color: #fff;
   /* padding will NOT inherited to child */
   padding: 3rem;
 }
@@ -56,8 +56,9 @@ body {
   /* 右下x轴为div的最后边，设为100%。 y轴要设置为不规则图形，高度减一半，设为50%，或特定像素px  */
   /* 也可以变为三角形，只设置 3个坐标点 例如 polygon(50% 0, 100% 100%, 0% 100%) */
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  /* Animation can still happen when hover */
+  /* when hover on the .logo-box, ONLY .logo have hover effects. .logo-box will NOT have any hover effects. */
 }
-
 .header__logo-box {
   /* logo-box的母element是 .header，只有将 .header 的position设为relative */
   /* logo-box的position: absolute才起作用 top和left这时才是对应母element作为参照*/
@@ -65,19 +66,14 @@ body {
   top: 4rem;
   left: 4rem;
 }
-
 .header__logo {
   /* 浏览器会自动计算width以满足图片的要求 */
   /* 设置width的话，浏览器会自动计算height */
   height: 3.5rem;
 }
-
-/* Animation can still happen when hover */
-/* when hover on the .logo-box, ONLY .logo have hover effects. .logo-box will NOT have any hover effects. */
 .header__logo-box:hover .header__logo {
   animation: moveInRight 1s ease-in;
 }
-
 .header__text-box {
   position: absolute;
   /* 在position为absolute的情况下，top left 各设置为 50% 是无法居中的 */
@@ -90,13 +86,12 @@ body {
 }
 
 .heading-primary {
-  color: white;
+  color: #fff;
   text-transform: uppercase;
   /* solve a problem when animation finished, the animation object may have a little bit(1 or 2px) shaking */
   backface-visibility: hidden;
   margin-bottom: 6rem;
 }
-
 .heading-primary--main {
   /* 这个class为span，将其设为block element 能够占用全部width，这样就能更好的调整位置 */
   display: block;
@@ -112,7 +107,6 @@ body {
   /* delay 3s to start the animation
   animation-delay: 3s; */
 }
-
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
@@ -166,8 +160,10 @@ body {
     transform: translateX(0);
   }
 }
-.btn:link,
-.btn:visited {
+.btn {
+  /* active is when click the button, the active effect starts */
+}
+.btn:link, .btn:visited {
   font-size: 1.6rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -177,23 +173,25 @@ body {
   transition: all 0.2s;
   position: relative;
 }
-
 .btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
-
-/* active is when click the button, the active effect starts */
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
 .btn:active {
   transform: translateY(-1px);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
-
 .btn--white {
   background-color: #fff;
   color: #777;
 }
-
+.btn--white::after {
+  background-color: #fff;
+}
 .btn::after {
   /* always need to put content value. if no value, put empty string */
   content: "";
@@ -213,16 +211,6 @@ body {
   z-index: -1;
   transition: all 0.4s;
 }
-
-.btn--white::after {
-  background-color: #fff;
-}
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
 .btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   /* it will automatically apply the styles up to 0% before the animnation statrs */
