--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,12 @@ $color-primary: #55c57a;
 $color-primary-light:#7ed56f;
 $color-primary-dark:#28b485;
 
+$color-grey-dark:#777;
+$color-white:#fff;
+$color-black:#000;
+
+
+
 /* use the universal selector to Normalize the css in order to make a cross browser reset */
 /* remember to add ::after & ::before as well, they still need a global reset */
 *,
@@ -14,6 +20,7 @@ $color-primary-dark:#28b485;
     /* after setting this. in body{box-sizing: boder-box}, all child element of body will take this effect */
     box-sizing: inherit;
 }
+
 
 /* any font setting will be inherited to all child elements */
 /* good to set font-size 10px === 1rem in html, easier to calculate font-size for child element by using rem  */
@@ -39,7 +46,7 @@ body {
     font-weight: 400;
     /* font-size: 16px; */
     line-height: 1.7;
-    color: #777;
+    color: $color-white;
 
     /* padding will NOT inherited to child */
     padding: 3rem;
@@ -74,88 +81,90 @@ body {
 
     /* 也可以变为三角形，只设置 3个坐标点 例如 polygon(50% 0, 100% 100%, 0% 100%) */
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+    &__logo-box {
+        /* logo-box的母element是 .header，只有将 .header 的position设为relative */
+        /* logo-box的position: absolute才起作用 top和left这时才是对应母element作为参照*/
+        position: absolute;
+        top: 4rem;
+        left: 4rem;
+    }
+
+    &__logo {
+        /* 浏览器会自动计算width以满足图片的要求 */
+        /* 设置width的话，浏览器会自动计算height */
+        height: 3.5rem;
+    }
+
+
+    /* Animation can still happen when hover */
+    /* when hover on the .logo-box, ONLY .logo have hover effects. .logo-box will NOT have any hover effects. */
+    &__logo-box:hover &__logo {
+        animation: moveInRight 1s ease-in;
+    }
+
+    &__text-box {
+        position: absolute;
+
+        /* 在position为absolute的情况下，top left 各设置为 50% 是无法居中的 */
+        /* 因为没有计算该element占用的空间 */
+        /* 使用transform则可以将element的占用空间计算进去，从而达到居中的效果 */
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
 
 
-.header__logo-box {
-    /* logo-box的母element是 .header，只有将 .header 的position设为relative */
-    /* logo-box的position: absolute才起作用 top和left这时才是对应母element作为参照*/
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
 
-.header__logo {
-    /* 浏览器会自动计算width以满足图片的要求 */
-    /* 设置width的话，浏览器会自动计算height */
-    height: 3.5rem;
-}
-
-/* Animation can still happen when hover */
-/* when hover on the .logo-box, ONLY .logo have hover effects. .logo-box will NOT have any hover effects. */
-.header__logo-box:hover .header__logo {
-    animation: moveInRight 1s ease-in;
-}
-
-
-
-.header__text-box {
-    position: absolute;
-
-    /* 在position为absolute的情况下，top left 各设置为 50% 是无法居中的 */
-    /* 因为没有计算该element占用的空间 */
-    /* 使用transform则可以将element的占用空间计算进去，从而达到居中的效果 */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
 
 .heading-primary {
-    color: white;
+    color: $color-white;
     text-transform: uppercase;
 
     /* solve a problem when animation finished, the animation object may have a little bit(1 or 2px) shaking */
     backface-visibility: hidden;
 
     margin-bottom: 6rem;
+
+    &--main {
+        /* 这个class为span，将其设为block element 能够占用全部width，这样就能更好的调整位置 */
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        margin-right: -3.5rem;
+
+        animation-name: moveInLeft;
+        animation-duration: 1s;
+        animation-timing-function: ease-out;
+
+        /* make the animation repeat 3 times
+        animation-iteration-count: 3; */
+
+        /* delay 3s to start the animation
+        animation-delay: 3s; */
+
+    }
+
+    &--sub {
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.75rem;
+        margin-right: -1.75rem;
+
+        /* short hand writting */
+        /* same as 
+        animation-name: moveInRight;
+        animation-duration: 1s;
+        animation-timing-function: ease-out; */
+        animation: moveInRight 1s ease-out;
+    }
 }
 
 
-.heading-primary--main {
-    /* 这个class为span，将其设为block element 能够占用全部width，这样就能更好的调整位置 */
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    margin-right: -3.5rem;
-
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-
-    /* make the animation repeat 3 times
-    animation-iteration-count: 3; */
-
-    /* delay 3s to start the animation
-    animation-delay: 3s; */
-
-}
-
-.heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem;
-    margin-right: -1.75rem;
-
-    /* short hand writting */
-    /* same as 
-    animation-name: moveInRight;
-    animation-duration: 1s;
-    animation-timing-function: ease-out; */
-    animation: moveInRight 1s ease-out;
-}
 
 
 /* Animation for H1 */
@@ -208,70 +217,73 @@ body {
 }
 
 
-.btn:link,
-.btn:visited {
-    font-size: 1.6rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all .2s;
-    position: relative;
-}
+.btn {
+    &:link,
+    &:visited {
+        font-size: 1.6rem;
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 1.5rem 4rem;
+        display: inline-block;
+        border-radius: 10rem;
+        transition: all .2s;
+        position: relative;
+    }
 
-.btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
-}
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 1rem 2rem rgba($color-black, .2);
 
-/* active is when click the button, the active effect starts */
-.btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-}
+        &::after {
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
+        }
+    }
 
-.btn--white {
-    background-color: #fff;
-    color: #777;
-}
 
-.btn::after {
-    /* always need to put content value. if no value, put empty string */
-    content: "";
+    /* active is when click the button, the active effect starts */
+    &:active {
+        transform: translateY(-1px);
+        box-shadow: 0 .5rem 1rem rgba($color-black, .2);
+    }
 
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
+    &--white {
+        background-color: $color-white;
+        color: $color-grey-dark;
 
-    /* below used to hide the content:"" of the actual button */
-    /* absolute position needs to have a reference */
-    /* the reference is the first element with the relative position that it can find */
-    /* here, .header & .btn has relative position */
-    /* .btn is the first relative element can be found */
-    /* so follow the .btn position */
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+        &::after {
+            background-color: $color-white;
+        }
+    }
 
-    transition: all .4s;
-}
+    &::after {
+        /* always need to put content value. if no value, put empty string */
+        content: "";
 
-.btn--white::after {
-    background-color: #fff;
-}
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        border-radius: 10rem;
 
-.btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
+        /* below used to hide the content:"" of the actual button */
+        /* absolute position needs to have a reference */
+        /* the reference is the first element with the relative position that it can find */
+        /* here, .header & .btn has relative position */
+        /* .btn is the first relative element can be found */
+        /* so follow the .btn position */
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
 
-.btn--animated {
-    animation: moveInBottom .5s ease-out .75s;
+        transition: all .4s;
+    }
 
-    /* it will automatically apply the styles up to 0% before the animnation statrs */
-    /* the animation is using moveInBottom, so the 0% effect is from moveInBottom */
-    animation-fill-mode: backwards;
+    &--animated {
+        animation: moveInBottom .5s ease-out .75s;
+
+        /* it will automatically apply the styles up to 0% before the animnation statrs */
+        /* the animation is using moveInBottom, so the 0% effect is from moveInBottom */
+        animation-fill-mode: backwards;
+    }
 }
